[workspace]
members = ["text2pixel_pages"]

[package]
name = "text2pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
embedded-graphics = "0.8.1"
png = "0.17.13"
