[package]
name = "text2pixel_pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
text2pixel = { path = "../" }
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
